--- a/app/src/main/res/navigation/nav_labs.xml
+++ b/app/src/main/res/navigation/nav_labs.xml
@@ -5,6 +5,9 @@
     android:id="@+id/nav_labs"
     app:startDestination="@id/labsMainFragment">
 
+    <action
+        android:id="@+id/navigate_global_to_navApp"
+        app:destination="@id/nav_app" />
 
     <action
         android:id="@+id/navigate_global_to_navDefault"
@@ -20,42 +23,6 @@
         android:label="Main"
         tools:layout="@layout/labs_main_fragment">
 
-        <!--<action
-            android:id="@+id/navigate_to_labsSample1"
-            app:destination="@id/labsSample1Fragment" />
 
-        <action
-            android:id="@+id/navigate_to_labs3d"
-            app:destination="@id/labs3dFragment" />
-
-        <action
-            android:id="@+id/navigate_to_labsJson"
-            app:destination="@id/labsJsonFragment" />
-
-        <action
-            android:id="@+id/navigate_to_labsTemplate"
-            app:destination="@id/labsTemplateFragment" />
-
-        <action
-            android:id="@+id/navigate_to_labs3d_sense"
-            app:destination="@id/labs3dSenseFragment" />
-
-        <action
-            android:id="@+id/navigate_to_labs3d_sense2"
-            app:destination="@id/labs3dSense2Fragment" />
-
-        <action
-            android:id="@+id/navigate_to_labs3d_model"
-            app:destination="@id/labs3dModelFragment" />
-
-        <action
-            android:id="@+id/navigate_to_launcher"
-            app:destination="@id/launcherFragment" />
-        <action
-            android:id="@+id/navigate_to_ad_list_fragment"
-            app:destination="@id/AdListFragment" />
-        <action
-            android:id="@+id/navigate_to_info_fragment"
-            app:destination="@id/InfoFragment" />-->
     </fragment>
 </navigation>
