--- a/app/src/main/res/values/colors_md.xml
+++ b/app/src/main/res/values/colors_md.xml
@@ -21,7 +21,7 @@
     <color name="md_theme_light_background">#F7FFEE</color>
     <color name="md_theme_light_onBackground">#002200</color>
     <color name="md_theme_light_surface">#F7FFEE</color>
-    <color name="md_theme_light_onSurface">#002200</color>
+    <color name="md_theme_light_onSurface">#121712</color>
     <color name="md_theme_light_surfaceVariant">#DCE5DC</color>
     <color name="md_theme_light_onSurfaceVariant">#414942</color>
     <color name="md_theme_light_outline">#717972</color>
@@ -51,7 +51,7 @@
     <color name="md_theme_dark_background">#002200</color>
     <color name="md_theme_dark_onBackground">#B0F49E</color>
     <color name="md_theme_dark_surface">#002200</color>
-    <color name="md_theme_dark_onSurface">#B0F49E</color>
+    <color name="md_theme_dark_onSurface">#D0E9CA</color>
     <color name="md_theme_dark_surfaceVariant">#414942</color>
     <color name="md_theme_dark_onSurfaceVariant">#C0C9C0</color>
     <color name="md_theme_dark_outline">#8A938B</color>
@@ -63,7 +63,10 @@
     <color name="md_theme_dark_outlineVariant">#414942</color>
     <color name="md_theme_dark_scrim">#000000</color>
 
-    <color name="colorOnPrimary">@color/md_theme_light_onSurface</color>
+    <color name="colorBack">@color/white</color>
+    <color name="colorSurface">@color/md_theme_light_surface</color>
+    <color name="colorShadow">@color/md_black_1000</color>
+    <color name="colorOnSurface">@color/md_theme_light_onSurface</color>
 
 
 
