--- a/app/src/main/res/layout/home_weather_card.xml
+++ b/app/src/main/res/layout/home_weather_card.xml
@@ -9,6 +9,7 @@
     <com.google.android.material.imageview.ShapeableImageView
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:id="@+id/home_weather_card_image"
         android:layout_margin="@dimen/dp_1"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
