--- a/app/src/main/res/layout/nav_home_fragment.xml
+++ b/app/src/main/res/layout/nav_home_fragment.xml
@@ -41,27 +41,99 @@
                 android:paddingBottom="@dimen/dp_200"
                 android:clipToPadding="false">
 
-                <View
-                    android:id="@+id/check1" android:layout_height="0dp"
-                    android:layout_width="0dp"
-                    app:layout_constraintDimensionRatio="0.6"
-                    app:layout_constraintWidth_percent="0.8"
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerview"
+                    android:layout_width="match_parent"
+
+                    android:layout_marginTop="@dimen/dp_24"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
+
+                    android:paddingStart="@dimen/dp_24"
+                    android:paddingEnd="@dimen/dp_24"
+                    android:clipToPadding="false"
+                    tools:listitem="@layout/home_category_item"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    android:orientation="horizontal"/>
+
+                <!--<include
+                    android:id="@+id/home_weather_card"
+                    layout="@layout/home_weather_card"
+
+                    app:layout_constraintTop_toBottomOf="@id/recyclerview"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"/>-->
+                <include
+                    android:id="@+id/home_weather_card"
+                    layout="@layout/home_weather_card"
+                    app:layout_constraintTop_toBottomOf="@id/recyclerview"
                     app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_marginTop="@dimen/dp_24"
+                    android:layout_marginHorizontal="@dimen/dp_24"
+
+                    />
+               <!-- <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/home_weather_card"
+                    app:layout_constraintTop_toBottomOf="@id/recyclerview"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:minHeight="@dimen/dp_200"
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+-->
+
+                <View
+                    android:id="@+id/check1"
+                    android:layout_height="0dp"
+                    android:layout_width="0dp"
+
+                    app:layout_constraintTop_toBottomOf="@id/home_weather_card"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintDimensionRatio="0.6"
+                    app:layout_constraintWidth_percent="0.8"
+                    android:layout_marginTop="@dimen/dp_24"
+
                     android:background="@color/taru_green_30"/>
 
-                <View android:layout_height="0dp"
+                <View
+                    android:id="@+id/check2"
+                    android:layout_height="0dp"
+                    app:layout_constraintTop_toBottomOf="@id/check1"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     android:layout_width="0dp"
+
                     android:layout_marginTop="@dimen/dp_24"
                     app:layout_constraintDimensionRatio="0.8"
                     app:layout_constraintWidth_percent="0.7"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/check1"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:background="@color/taru_green_10"/>
 
+                    android:background="@color/taru_green_10"/>
+                <!--<androidx.constraintlayout.helper.widget.Flow
+                    android:id="@+id/flow"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:constraint_referenced_ids="recyclerview,home_weather_card,check1,check2"
+                    app:flow_horizontalAlign="center"
+                    app:flow_maxElementsWrap="1"
+                    app:flow_horizontalBias="0"
+                    app:flow_verticalBias="0"
+                    app:flow_wrapMode="chain2"
+                    app:flow_horizontalStyle="spread_inside"
+                    app:flow_verticalAlign="center"
+                    app:flow_verticalGap="@dimen/dp_24"
+                    android:layout_marginTop="@dimen/dp_24"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>-->
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.core.widget.NestedScrollView>
