--- a/app/src/main/res/layout/nav_home_fragment.xml
+++ b/app/src/main/res/layout/nav_home_fragment.xml
@@ -14,7 +14,8 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:fitsSystemWindows="true"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="?colorSurface">
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
@@ -41,6 +42,25 @@
                 android:paddingBottom="@dimen/dp_200"
                 android:clipToPadding="false">
 
+                <Button
+                    android:id="@+id/home_search_btn"
+
+                    style="@style/Widget.Material3.Button.ElevatedButton.Icon"
+                    android:layout_marginTop="@dimen/dp_24"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:minHeight="@dimen/dp_56"
+                    android:layout_marginHorizontal="@dimen/dp_24"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:icon="@drawable/ic_if_search"
+                    android:text="Search Plant .."
+                    app:iconPadding="@dimen/dp_24"
+                    android:textAlignment="textStart"
+                    android:textColor="@color/color_on_surface_38"
+                    />
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerview"
                     android:layout_width="match_parent"
@@ -49,7 +69,7 @@
                     android:layout_height="wrap_content"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/home_search_btn"
 
                     android:paddingStart="@dimen/dp_24"
                     android:paddingEnd="@dimen/dp_24"
@@ -77,6 +97,21 @@
                     android:layout_marginHorizontal="@dimen/dp_24"
 
                     />
+<!--
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"-->
+                <include
+                    android:id="@+id/home_scanner_card"
+                    layout="@layout/home_scanner_card"
+                    app:layout_constraintTop_toBottomOf="@id/home_weather_card"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_height="@dimen/dp_216"
+                    android:layout_width="match_parent"
+                    android:layout_marginTop="@dimen/dp_24"
+                    android:layout_marginHorizontal="@dimen/dp_24"
+
+                    />
                <!-- <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/home_weather_card"
                     app:layout_constraintTop_toBottomOf="@id/recyclerview"
@@ -88,7 +123,7 @@
                     android:layout_height="wrap_content">
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
--->
+--><!--
 
                 <View
                     android:id="@+id/check1"
@@ -116,7 +151,7 @@
                     app:layout_constraintDimensionRatio="0.8"
                     app:layout_constraintWidth_percent="0.7"
 
-                    android:background="@color/taru_green_10"/>
+                    android:background="@color/taru_green_10"/>-->
                 <!--<androidx.constraintlayout.helper.widget.Flow
                     android:id="@+id/flow"
                     android:layout_width="match_parent"
