--- a/app/src/main/res/layout/nav_plants_item.xml
+++ b/app/src/main/res/layout/nav_plants_item.xml
@@ -7,6 +7,7 @@
     android:layout_marginEnd="@dimen/dp_12"
     android:foreground="@drawable/dr_ripple_round_24"
     android:clickable="true"
+    android:layout_marginBottom="@dimen/dp_12"
     android:focusable="true"
 
     android:layout_height="wrap_content">
@@ -49,7 +50,7 @@
         android:text="Radish"
         android:gravity="center_horizontal"
         android:textColor="@color/colorOnSurface"
-        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
+        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
         android:layout_marginTop="@dimen/dp_8"
         android:layout_marginStart="@dimen/dp_20"
         app:layout_constraintTop_toBottomOf="@+id/nav_plants_recent_item_image"
@@ -64,7 +65,7 @@
         tools:text="Radish"
         android:text="Radish"
         android:gravity="center_horizontal"
-        android:textColor="@color/colorOnSurface"
+        android:textColor="@color/color_on_surface_54"
         android:textAppearance="@style/TextAppearance.Material3.BodySmall"
         android:layout_marginTop="@dimen/dp_2"
         android:layout_marginStart="@dimen/dp_20"
