working on plant detail

--- a/app/src/main/res/drawable/dr_rect_round_24.xml
+++ b/app/src/main/res/drawable/dr_rect_round_24.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/colorBack" />
+    <solid android:color="@color/colorCard" />
     <corners android:radius="@dimen/dp_24" />
 </shape>
