--- a/app/src/main/res/layout/nav_home_fragment.xml
+++ b/app/src/main/res/layout/nav_home_fragment.xml
@@ -115,6 +115,7 @@
                     android:layout_marginTop="@dimen/dp_24"
                     android:layout_marginHorizontal="@dimen/dp_24"
 
+                    app:bViewModel="@{bViewModel}"
                     />
 <!--
                     android:layout_height="wrap_content"
