--- a/app/src/main/res/values/dimen_set.xml
+++ b/app/src/main/res/values/dimen_set.xml
@@ -94,6 +94,7 @@
     <dimen name="sp_44">44sp</dimen>
     <dimen name="sp_64">64sp</dimen>
     <dimen name="sp_80">80sp</dimen>
+    <dimen name="sp_108">108sp</dimen>
 
 
 
