--- a/app/src/main/res/drawable/dr_rect_round_32_back_alpha.xml
+++ b/app/src/main/res/drawable/dr_rect_round_32_back_alpha.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/md_white_1000_75" />
-    <corners android:radius="@dimen/dp_18" />
-    <stroke android:color="@color/md_white_1000"
+    <solid android:color="@color/color_back_54" />
+    <corners android:radius="@dimen/dp_32" />
+    <stroke android:color="@color/colorBack"
         android:width="@dimen/dp_1"/>
 </shape>
