--- a/app/src/main/res/layout/home_weather_card.xml
+++ b/app/src/main/res/layout/home_weather_card.xml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+
+        <import type="android.view.View" />
+        <variable
+            name="bViewModel"
+            type="com.taru.ui.pages.nav.home.NavHomeViewModel" />
+    </data>
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clickable="true"
     android:focusable="true"
+    android:onClick="@{() -> bViewModel.navigateToWeather()}"
     android:foreground="@drawable/dr_ripple_round_32"
     android:background="@drawable/dr_rect_round_32_surface">
 
@@ -15,6 +26,7 @@
         android:id="@+id/home_weather_card_image"
         android:layout_margin="@dimen/dp_1"
         android:scaleType="centerCrop"
+        android:foreground="@drawable/dr_rect_round_32_gradient_white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="1.0"
@@ -169,3 +181,4 @@
         android:layout_marginBottom="@dimen/dp_24"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
