--- a/app/src/main/res/navigation/nav_app.xml
+++ b/app/src/main/res/navigation/nav_app.xml
@@ -7,6 +7,8 @@
 
     <action android:id="@+id/action_global_to_Scan"
         app:destination="@id/scan"/>
+    <action android:id="@+id/action_global_to_weather"
+        app:destination="@id/weather"/>
 
     <fragment
         android:id="@+id/nav_home"
@@ -39,5 +41,10 @@
         android:label="Scan"
         tools:layout="@layout/scan_fragment">
     </fragment>
-
+    <fragment
+        android:id="@+id/weather"
+        android:name="com.taru.ui.pages.weather.WeatherFragment"
+        android:label="Scan"
+        tools:layout="@layout/weather_fragment">
+    </fragment>
 </navigation>
