--- a/app/src/main/res/values/colors_md.xml
+++ b/app/src/main/res/values/colors_md.xml
@@ -67,6 +67,7 @@
     <color name="colorSurface">@color/md_theme_light_surface</color>
     <color name="colorShadow">@color/md_black_1000</color>
     <color name="colorOnSurface">@color/md_theme_light_onSurface</color>
+    <color name="colorCard">@color/white</color>
 
 
 
